recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:20: error: not found: value sqaureSide
		sqaureSide(levels-1,length / 3.)
                ^